syntax = "proto3";

package aigc.v1;

option go_package = "aigcv3/backend/api/aigc/v1;v1";

import "google/api/annotations.proto";

service User {
  rpc SendCode (SendCodeRequest) returns (SendCodeReply) {
    option (google.api.http) = {
      post: "/api/sendCode"
      body: "*"
    };
  }
  rpc Register (RegisterRequest) returns (RegisterReply) {
    option (google.api.http) = {
      post: "/api/register"
      body: "*"
    };
  }
  rpc Login (LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/api/login"
      body: "*"
    };
  }
  rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoReply) {
    option (google.api.http) = {
      get: "/api/userInfo"
    };
  }
  rpc Logout (LogoutRequest) returns (LogoutReply) {
    option (google.api.http) = {
      post: "/api/logout"
      body: "*"
    };
  }
}

message SendCodeRequest {
  string email = 1;
}
message SendCodeReply {
  int32 code = 1;
  string message = 2;
  string data = 3;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string code = 3;
}
message RegisterReply {
  int32 code = 1;
  string message = 2;
  string data = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}
message LoginReply {
  int32 code = 1;
  string token = 2;
  string message = 3;
}

message GetUserInfoRequest {}
message GetUserInfoReply {
  int32 code = 1;
  string email = 2;
  string message = 3;
}

message LogoutRequest {}
message LogoutReply {
  int32 code = 1;
  string message = 2;
} 